app/css/media_queries.scss
/* Overrides for mobile */

@media #{$small-only} {
  .row {
    max-width: 100%;
  }

  .uiview div.row:first-of-type {
    padding: 0 rem-calc(4px) 0 rem-calc(4px);
  }

  /* Login */

  #login {
    background-image: url('/img/background_640.jpg');
  }

  /* Typography */

  h1 { font-size: $h1-font-size - $h1-font-reduction; }
  h2 { font-size: $h2-font-size - $h2-font-reduction; }
  h3 { font-size: $h3-font-size; }
  h4 { font-size: $h4-font-size; }
  h5 { font-size: $h5-font-size; }
  h6 { font-size: $h6-font-size; }

  /* Dashboard */

  .dashboard {
    .heading a {
      padding-top: rem-calc(32px);
    }
  }

  ride a, .dashboard .new a, #rides .new a {
    margin: auto;
    max-width: 70%;
  }

  .gym-rides {
    h3 {
      min-height: rem-calc(24px);
    }
  }

  /* Recent classes */

  .dashboard, #classes {
    table {
      border: none;
    }
    table, tbody, td, tr {
      display: block;
    }
    td {
      width: 50%;
      float: left;
      // Because floating add td's left means we can't give tr a border
      &:last-child, &:nth-last-child(2) {
        border-bottom: 1px solid $grey_darker;
      }
    }
  }

  /* Choose template */

  .template {
    min-height: inherit;
    max-width: 70%;
    margin: auto;
  }

  /* Track search */

  .tracks-modal {
    padding: 4px;
  }

  .tracks .search {
    margin-top: rem-calc(16px);
  }
}

@media #{$medium-only} {
 .row {
    max-width: 95%;
  }

  /* Login */

  #login {
    background-image: url('/img/background_1024.jpg');
  }

  /* Track search */

  .tracks-modal {
    padding: 4px;
  }

  .tracks .search {
    margin-top: rem-calc(16px);
  }
}

@media #{$large-up} {
  .max-content {
    max-width: rem-calc(800px);
  }

  /* Login */

  #login {
    background-image: url('/img/background_big.jpg');
  }
}

